[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/UI/button/stage/title_jilid.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/button/stage/frame_jilid_active.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/button/stage/frame_jilid.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/button/stage/map_1.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/button/back.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/button/back_press.png" type="Texture" id=6]
[ext_resource path="res://scene/transition.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/Menu/StageController.gd" type="Script" id=8]
[ext_resource path="res://assets/UI/page/bg_ingame.png" type="Texture" id=9]

[node name="StageSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 49.2784
margin_top = 69.3339
margin_right = 280.278
margin_bottom = 407.334
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cover" type="TextureRect" parent="TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -155.0
margin_right = 106.0
margin_bottom = 155.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="TextureButton"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -101.0
margin_top = -122.0
margin_right = 101.0
margin_bottom = -65.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_back" type="TextureButton" parent="."]
margin_left = 12.0
margin_top = 13.0
margin_right = 58.0
margin_bottom = 59.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transition" parent="." instance=ExtResource( 7 )]
[connection signal="button_up" from="TextureButton" to="." method="_on_ch1"]
[connection signal="button_up" from="btn_back" to="." method="_on_return_to_menu"]
